# fifi

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
fifi/api/: fifi.py  plot.py  report.py
fifi/api/encoders/: label.py  one_hot.py
fifi/api/outliers/: outliers.py
fifi/api/pipeline/: pipeline.py
fifi/api/plots/: __init__.py  correlation.py  time_series.py
