[tool.poetry]
name = "fifi"
version = "0.1.0"
description = "data science for swiss cheese brains"
authors = ["fibleep <filipn924@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.18"
seaborn = "^0.13.2"
pyarrow = "^15.0.2"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
